--- a/src/app/pages/contacts/contact-register/contact-register.page.scss
+++ b/src/app/pages/contacts/contact-register/contact-register.page.scss
@@ -6,10 +6,9 @@ ion-item{
     --border-radius:10px;
 }
 
-ion-button{
-    width: 60%;
-    height: 60px;
-    --border-radius: 20px;
+ion-button {
+    height: 45px;
+    width: 300px;
 }
 
 .container {
