--- a/src/app/pages/contacts/contacts.page.scss
+++ b/src/app/pages/contacts/contacts.page.scss
@@ -25,3 +25,8 @@ ion-button{
     border: 1px solid #8c8c8c;
     border-radius: 50%;
   }
+
+  ion-button {
+    height: 45px;
+    width: 300px;
+}
