--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -51,7 +51,7 @@
 
 ion-button{
   // --background:#e2c4e2;
-  --background:hsl(0, 0%, 100%) !important;
+  --background:#5260ff !important;
   // --box-shadow:transparent;
 }
 
@@ -99,7 +99,6 @@ ion-button {
 // }
 
 ion-content{
---background:rgb(255, 255, 255);
 
 
 
@@ -110,7 +109,7 @@ ion-content{
     padding: 0px;
     list-style: none;
     overflow: hidden;
-    background: #beeec4;
+    background: #7eaaf4;
     height: 100%;
 
     #teste{
