--- a/src/app/pages/user-register/user-register.page.html
+++ b/src/app/pages/user-register/user-register.page.html
@@ -46,29 +46,48 @@
         </ion-text>
       </div>
       <ion-item>
-        <ion-button fill="clear" [routerLink]="['/main-contact/register']"><ion-icon slot="start"
+        <ion-button fill="clear" (click)="clickButton('mainContact')" [routerLink]="['/contacts/register']"><ion-icon slot="start"
             name="add-outline"></ion-icon>Cadastrar Anjo-da-Guarda</ion-button>
       </ion-item>
       <ion-item>
-        <ion-button fill="clear" [routerLink]="['/medical-contact/register']"><ion-icon slot="start"
+        <ion-button fill="clear" (click)="clickButton('medicalContact')" [routerLink]="['/contacts/register']"><ion-icon slot="start"
             name="add-outline"></ion-icon>Cadastrar Contatos Médicos</ion-button>
       </ion-item>
-      <ion-item>
-        <ion-button fill="clear" [routerLink]="['/preferences/music-register']"><ion-icon slot="start"
+      <!-- <ion-item>
+        <ion-button fill="clear" [routerLink]="['/preferences/music-register']" disabled><ion-icon slot="start"
             name="add-outline"></ion-icon>Cadastrar Músicas Preferidas</ion-button>
       </ion-item>
       <ion-item>
-        <ion-button fill="clear" [routerLink]="['/preferences/places-register']"><ion-icon slot="start"
+        <ion-button fill="clear" [routerLink]="['/preferences/places-register']" disabled><ion-icon slot="start"
             name="add-outline"></ion-icon>Cadastrar Lugares Preferidos</ion-button>
       </ion-item>
       <ion-item>
-        <ion-button fill="clear" [routerLink]="['/preferences/photo-register']"><ion-icon slot="start"
+        <ion-button fill="clear" [routerLink]="['/preferences/photo-register']" disabled><ion-icon slot="start"
             name="add-outline"></ion-icon>Cadastrar Imagens Preferidas</ion-button>
-      </ion-item>
+      </ion-item> -->
 
 
     </div>
-    <ion-grid>
+    <div>
+      <ion-row>
+        <ion-fab horizontal="center" style="margin-bottom: 10px;">
+          <ion-button shape="round" color="tertiary" [routerLink]="['/home']">
+            <ion-label>
+              < Voltar </ion-label>
+          </ion-button>
+        </ion-fab>
+      </ion-row>
+    </div>
+    <div style="margin-top: 55px;">
+      <ion-row>
+        <ion-fab horizontal="center" style="margin-bottom: 10px;">
+          <ion-button shape="round" color="tertiary">
+            <ion-label>Cadastrar ></ion-label>
+          </ion-button>
+        </ion-fab>
+      </ion-row>
+    </div>
+    <!-- <ion-grid>
       <ion-row>
         <ion-col style="text-align: center;">
           <ion-button class="action-button" style="--border-color: #25a139; color:#25a139" fill="outline" [routerLink]="['/home']">Add</ion-button>
@@ -77,7 +96,7 @@
           <ion-button  class="action-button" style="--border-color: #e21b1b; color:#e21b1b" fill="outline"  [routerLink]="['/home']">Voltar</ion-button>
         </ion-col>
       </ion-row>
-    </ion-grid>
+    </ion-grid> -->
 
 
   </form>
