--- a/src/app/pages/contacts/contacts.page.html
+++ b/src/app/pages/contacts/contacts.page.html
@@ -7,45 +7,27 @@
     <ion-title *ngIf="!mainContactList">
       Seus contatos médicos
     </ion-title>
-    <ion-item *ngIf="!mainContactList">
-      <ion-item *ngFor="let item of [0]">
-        <ion-avatar slot="start">
-          <ion-skeleton-text animated></ion-skeleton-text>
-        </ion-avatar>
-        <ion-label>
-          <h3>
-            <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
-          </h3>
-          <p>
-            <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
-          </p>
-          <p>
-            <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
-          </p>
-        </ion-label>
-      </ion-item>
-    </ion-item>
     <ion-item *ngIf="mainContactList">
-    <ion-item-sliding *ngFor="let mainContact of mainContacts">
-      <ion-item>
-        <ion-label>
-          {{mainContact.nome}}
-          <p>
-            {{mainContact.telefone}}
-          </p>
-          <p>
-            {{mainContact.email}}
-          </p>
-        </ion-label>
-      </ion-item>
+      <ion-item-sliding *ngFor="let mainContact of mainContacts">
+        <ion-item>
+          <ion-label>
+            {{mainContact.nome}}
+            <p>
+              {{mainContact.telefone}}
+            </p>
+            <p>
+              {{mainContact.email}}
+            </p>
+          </ion-label>
+        </ion-item>
 
-    </ion-item-sliding>
-  </ion-item>
-  <ion-item *ngIf="!mainContactList">
+      </ion-item-sliding>
+    </ion-item>
+    <ion-item *ngIf="!mainContactList">
       <ion-item-sliding *ngFor="let listMed of listMeds">
         <ion-item>
           <ion-label>
-              {{listMed.nome}}
+            {{listMed.nome}}
             <p>
               {{listMed.telefone}}
             </p>
@@ -54,21 +36,37 @@
             </p>
           </ion-label>
         </ion-item>
-  
+
       </ion-item-sliding>
     </ion-item>
 
-    <ion-grid>
+    <div>
       <ion-row>
-        <ion-col style="text-align: center;">
-          <ion-button style="--border-color: #25a139; color:#25a139" fill="outline"
-            [routerLink]="['/medical-register']">Add</ion-button>
-        </ion-col>
-        <ion-col style="text-align: center;">
-          <ion-button style="--border-color: #e21b1b; color:#e21b1b" fill="outline"
-            [routerLink]="['/home']">Voltar</ion-button>
-        </ion-col>
+        <ion-fab horizontal="center" style="margin-bottom: 10px;">
+          <ion-button shape="round" color="tertiary" [routerLink]="['/home']">
+            <ion-label>
+              < Voltar </ion-label>
+          </ion-button>
+        </ion-fab>
       </ion-row>
-    </ion-grid>
+    </div>
+    <div style="margin-top: 55px;">
+      <ion-row *ngIf="mainContactList">
+        <ion-fab horizontal="center" style="margin-bottom: 10px;">
+          <ion-button shape="round" color="tertiary" (click)="clickButton('mainContact')"
+            [routerLink]="['/contacts/register']">
+            <ion-label>Cadastrar ></ion-label>
+          </ion-button>
+        </ion-fab>
+      </ion-row>
+      <ion-row *ngIf="!mainContactList">
+        <ion-fab horizontal="center" style="margin-bottom: 10px;">
+          <ion-button shape="round" color="tertiary" (click)="clickButton('medicalContact')"
+            [routerLink]="['/contacts/register']">
+            <ion-label> Cadastrar > </ion-label>
+          </ion-button>
+        </ion-fab>
+      </ion-row>
+    </div>
   </div>
 </ion-content>
