--- a/src/app/pages/mood/mood.page.scss
+++ b/src/app/pages/mood/mood.page.scss
@@ -1,44 +1,24 @@
 .container {
-    text-align: center;
-    display: block;
-    margin: auto;
-    margin-top: 10%;
-    width: 50%;
-  }
-  
-  .container-text {
-    text-align: center;
-    margin-top: 50%;
-  }
-  
-  .container1{
-    text-align: center;
-  }
-  
-  .container2{
-    text-align: center;
-    margin-top: 10%;
-  }
-  
-  .card{
-          background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      padding: 20px;
-      margin: 20px;
-       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-  }
-  
-  ion-img{
-    height: 175px;
-  }
+  text-align: center;
+ padding: 0px 10px 0px 10px;
+//  margin: 10px 10px 0px 10px;
 
-  ion-button{
-    width: 60%;
-    height: 60px;
-    --border-radius: 20px;
+} 
+.avatar {
+  vertical-align: middle;
+  width: 60px;
+  height: 60px;
+  // border: 1px solid #8c8c8c;
+  border-radius: 50%;
+}
+
+.action-button{
+  width: 60%;
+  height: 60px;
+  --border-radius: 20px;
+}
+
+.button-action {
+height: 45px;
+width: 300px;
 }
