usuario logado e dados traf.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,10 +2,12 @@
 <ion-content>
   <div id="header">
     <div id="teste">
-      
       <ion-grid>
         <ion-row>
-          <h1>TESTE</h1>
+          <span>
+            <h1 >{{userCurrent.nome}}</h1>
+          </span>
+          
         </ion-row>
         <ion-row>
           <ion-col>
