--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
       <ion-grid>
         <ion-row>
           <span>
-            <h1 >{{userCurrent.nome}}</h1>
+            <h1 >{{user.nome}}</h1>
           </span>
           
         </ion-row>
