--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,46 +4,39 @@
     <p class="subTitle">Acesse sua conta</p>
   </div>
 
-  <form [formGroup]="loginForm">
+  <form >
     <div class="ion-padding">
       <ion-item>
-        <ion-input formControlName="email" placeholder="email" class="input"></ion-input>
+        <ion-input name="email" placeholder="email" [(ngModel)]="email"></ion-input>
         <ion-icon name="mail-outline" slot="end"></ion-icon>
       </ion-item>
-      <div class="error ion-padding" *ngIf="this.loginForm.controls?.['email'].touched 
-      && this.loginForm.controls?.['email'].invalid">
-        <ion-text *ngIf="errorControl.email.errors?.required">
-          Email é obrigatório
-        </ion-text>
-        <ion-text *ngIf="errorControl.email.errors?.pattern">
-          Email precisa ser válido
-        </ion-text>
-      </div>
       <ion-item>
-        <ion-input formControlName="password" placeholder="senha" class="input"></ion-input>
+        <ion-input name="password" placeholder="senha" class="input" [(ngModel)]="password"></ion-input>
         <ion-icon name="lock-closed-outline" slot="end"></ion-icon>
       </ion-item>
-      <div *ngIf="this.loginForm.controls?.['password'].touched 
-      && this.loginForm.controls?.['password'].invalid">
-        <ion-text *ngIf="errorControl.password.errors?.required">
-          Senha é obrigatória
-        </ion-text>
-        <ion-text *ngIf="errorControl.password.errors?.pattern">
-          Senha precisa de no min. 8 digitos contendo
-          Letras maiuscula, minuscula e caracter especial
-          
-        </ion-text>
-      </div>
       <div class="forgotPassword">
         <a [routerLink]="['/reset-password']"  style="color:#000">Esqueceu a senha</a>
       </div>
      
     </div>
-    <ion-fab horizontal="center" style="margin-bottom: 10px;">
-      <ion-button  shape="round" color="tertiary"  (click)="login()">
-        <ion-label>Logar ></ion-label>
-      </ion-button>
-    </ion-fab>
+    <div>
+      <ion-item>
+        <ion-fab horizontal="center" style="margin-bottom: 10px;">
+          <ion-button  shape="round" color="tertiary"  (click)="login(this.email,this.password)">
+            <ion-label>Logar ></ion-label>
+          </ion-button>
+        </ion-fab>
+      </ion-item>
+      <ion-item>
+        <ion-fab horizontal="center" style="margin-bottom: 10px;">
+          <ion-button  shape="round" color="tertiary"  (click)="auth.googleSignin()">
+            <ion-label>Logar com Google ></ion-label>
+          </ion-button>
+        </ion-fab>
+      </ion-item>
+    </div>
+  
+ 
     <div class="signupLink" style="text-align: center;">
       <p> É novo por aqui? 
     <br>
@@ -56,5 +49,7 @@
         </ion-button>
       </ion-fab>
     </div>
+
   </form>
+
 </ion-content>
