--- a/src/app/pages/preferences/music-register/music-register.page.html
+++ b/src/app/pages/preferences/music-register/music-register.page.html
@@ -1,6 +1,6 @@
 <!-- <ion-content [fullscreen]="true">
   <div class="header">
-    <ion-title class="title">Bem Vindo</ion-title>
+    <ion-title size="large"class="title">Bem Vindo</ion-title>
     <p class="subTitle">Registre seu Anjo-da-Guarda</p>
   </div>
 
