--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="header">
-    <ion-title class="title">
+    <ion-title size="small" class="title">
       Recuperar sua conta
       <p class="subTitle">
         Receber um link de redefinição de senha
