--- a/src/app/pages/reset-password/reset-password.page.scss
+++ b/src/app/pages/reset-password/reset-password.page.scss
@@ -15,12 +15,11 @@ ion-item{
         color:gray;
         font-size: 0.9rem;
     }
-    .title{
-        font-size: 2rem;
-    }
+   
 }
 
+
 ion-button {
-    height: 45px;
+    height: 0;
     width: 300px;
 }
