--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,13 @@
 <ion-content [fullscreen]="true">
   <div class="header">
-    <ion-title class="title">Bem Vindo</ion-title>
+    <ion-title size="large">Bem Vindo</ion-title>
     <p class="subTitle">Acesse sua conta</p>
   </div>
 
-  <form >
+  <form>
     <div class="ion-padding">
       <ion-item>
-        <ion-input name="email" placeholder="email" [(ngModel)]="email"></ion-input>
+        <ion-input name="email" placeholder="e-mail" [(ngModel)]="email"></ion-input>
         <ion-icon name="mail-outline" slot="end"></ion-icon>
       </ion-item>
       <ion-item>
@@ -15,39 +15,48 @@
         <ion-icon name="lock-closed-outline" slot="end"></ion-icon>
       </ion-item>
       <div class="forgotPassword">
-        <a [routerLink]="['/reset-password']"  style="color:#000">Esqueceu a senha</a>
+        <a [routerLink]="['/reset-password']" style="color:#000">Esqueceu a senha</a>
       </div>
+
+    </div>
+    <ion-grid>
+      <ion-row class="ion-justify-content-center button-line">
+        <ion-col size="10">
+          <ion-fab horizontal="center">
+            <ion-button shape="round" color="tertiary" (click)="login(this.email,this.password)">
+              <ion-label>Logar ></ion-label>
+            </ion-button>
+          </ion-fab>
+        </ion-col>
+        <ion-col size="10">
+          <ion-fab horizontal="center">
+            <ion-button shape="round" color="dark" (click)="auth.googleSignin()">
+              <ion-label>Logar com Google ></ion-label>
+            </ion-button>
+          </ion-fab>
+        </ion-col>
+      </ion-row>
      
-    </div>
-    <div>
-      <ion-item>
-        <ion-fab horizontal="center" style="margin-bottom: 10px;">
-          <ion-button  shape="round" color="tertiary"  (click)="login(this.email,this.password)">
-            <ion-label>Logar ></ion-label>
-          </ion-button>
-        </ion-fab>
-      </ion-item>
-      <ion-item>
-        <ion-fab horizontal="center" style="margin-bottom: 10px;">
-          <ion-button  shape="round" color="tertiary"  (click)="auth.googleSignin()">
-            <ion-label>Logar com Google ></ion-label>
-          </ion-button>
-        </ion-fab>
-      </ion-item>
-    </div>
-  
+    </ion-grid>
+
+
+
  
-    <div class="signupLink" style="text-align: center;">
-      <p> É novo por aqui? 
-    <br>
-  </p>
-    </div>
-    <div style="margin-top: 100px;">
-      <ion-fab horizontal="center" style="margin-bottom: 10px;">
+    <div style="margin-top: 50px;">
+
+      <ion-row class="ion-justify-content-center">
+        <p> É novo por aqui?
+          <br>
+        </p>
+        <ion-button fill="clear" [routerLink]="['/signup']"><ion-icon slot="start"
+            name="walk-outline"></ion-icon>Registre-se &nbsp;<ion-icon name="arrow-redo-outline"></ion-icon></ion-button>
+      </ion-row>
+      <!-- <ion-fab horizontal="center" >
         <ion-button  shape="round" color="tertiary"  [routerLink]="['/signup']">
           <ion-label>Cadastrar ></ion-label>
         </ion-button>
-      </ion-fab>
+      
+      </ion-fab> -->
     </div>
 
   </form>
