--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -57,6 +57,16 @@ ion-item {
 }
 
 ion-button {
-    height: 45px;
+    height: 0;
     width: 300px;
 }
+
+.button-line{
+    height: 115px;
+}
+
+// ion-title.title-large {
+//     font-size: 35px;
+//     font-weight: bold;
+//     font-family: Georgia;
+//   }
